// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Snapshot tests — CSS refactor safety > AgendaBadge 1`] = `
<div
  class="flex-center gap-xs px-sm py-2xs radius-md status-warning-bg "
>
  <div
    class="size-[8px] radius-full status-warning-dot"
  />
  <span
    class="typo-body-sm-bold text-right whitespace-nowrap"
  >
    0,521
  </span>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > AgendaIndicator 1`] = `
<div
  class="flex flex-col gap-sm w-full"
>
  <div
    class="flex items-center gap-md px-xs w-full"
  >
    <span
      class="flex-1 typo-body-sm"
    >
      IDHM
    </span>
    <div
      class="flex-center gap-xs px-sm py-2xs radius-md status-success-bg "
    >
      <div
        class="size-[8px] radius-full status-success-dot"
      />
      <span
        class="typo-body-sm-bold text-right whitespace-nowrap"
      >
        0,720
      </span>
    </div>
  </div>
  <div
    class="divider"
  />
</div>
`;

exports[`Snapshot tests — CSS refactor safety > AgendaStats 1`] = `
<div
  class="card-surface px-lg py-md flex-between gap-3xl w-full "
>
  <div
    class="flex-center gap-sm"
  >
    <span
      class="typo-display"
    >
      10
    </span>
    <span
      class="typo-body"
    >
      indicadores alinhados às agendas estratégicas para melhorar o ambiente de negócios do seu município
    </span>
  </div>
  <div
    class="flex-center gap-md"
  >
    <div
      class="flex-center gap-xs px-sm py-xs radius-md status-success-bg"
    >
      <div
        class="size-[10px] radius-full status-success-dot"
      />
      <span
        class="typo-display-sm"
      >
        5
      </span>
      <span
        class="typo-body"
      >
        Bom
      </span>
    </div>
    <div
      class="flex-center gap-xs px-sm py-xs radius-md status-warning-bg"
    >
      <div
        class="size-[10px] radius-full status-warning-dot"
      />
      <span
        class="typo-display-sm"
      >
        3
      </span>
      <span
        class="typo-body"
      >
        Atenção
      </span>
    </div>
    <div
      class="flex-center gap-xs px-sm py-xs radius-md status-alert-bg"
    >
      <div
        class="size-[10px] radius-full status-alert-dot"
      />
      <span
        class="typo-display-sm"
      >
        2
      </span>
      <span
        class="typo-body"
      >
        Alerta
      </span>
    </div>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > Card 1`] = `
<div
  class="card-surface p-md"
>
  <div>
    Content
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > EconomicsCard 1`] = `
<div
  class="card-surface p-md flex-col-start justify-between h-[172px] "
>
  <div
    class="flex items-center gap-sm w-full"
  >
    <div
      class="shrink-0 size-[32px] radius-full bg-surface-secondary flex items-center justify-center"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-trending-up text-[var(--semantic-text-primary)]"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M16 7h6v6"
        />
        <path
          d="m22 7-8.5 8.5-5-5L2 17"
        />
      </svg>
    </div>
    <span
      class="typo-h4"
    >
      PIB per capita
    </span>
  </div>
  <div
    class="flex items-end justify-between w-full"
  >
    <span
      class="typo-display-sm max-w-[130px]"
    >
      R$ 22.500
    </span>
    <span
      class="typo-body-sm-bold"
    >
      +3,2%
    </span>
  </div>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > Footer 1`] = `
<footer
  class="bg-surface px-margin py-2xl "
>
  <div
    class="flex items-start justify-between"
  >
    <div
      class="flex flex-col gap-sm items-start"
    >
      <img
        alt="Sebrae"
        class="h-[60px] w-[111px] object-cover"
        src="/assets/sebrae-logo.png"
      />
      <h3
        class="typo-h3"
      >
        Plataforma OPP
      </h3>
      <p
        class="typo-body whitespace-pre-line"
      >
        Transformando dados em
decisões estratégicas.
      </p>
    </div>
    <div
      class="flex flex-col gap-sm items-start"
    >
      <span
        class="typo-body-bold"
      >
        Navegação
      </span>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Início
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Panorama
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Recursos
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Capacitação
      </a>
    </div>
    <div
      class="flex flex-col gap-sm items-start"
    >
      <span
        class="typo-body-bold"
      >
        Recursos
      </span>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Documentação
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Tutoriais
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        API
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Suporte
      </a>
    </div>
    <div
      class="flex flex-col gap-sm items-start"
    >
      <span
        class="typo-body-bold"
      >
        Contato
      </span>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        contato@plataforma.gov.br
      </a>
      <a
        class="typo-body no-underline transition-colors hover:text-accent"
        href="#"
      >
        Fale Conosco
      </a>
    </div>
  </div>
  <div
    class="flex flex-col gap-lg items-start mt-[var(--spacing-lg)] pb-2xl"
  >
    <div
      class="divider"
    />
    <p
      class="typo-body"
    >
      © 2025 Plataforma. Todos os direitos reservados.
    </p>
  </div>
</footer>
`;

exports[`Snapshot tests — CSS refactor safety > Header 1`] = `
<header
  class="flex-between mx-auto w-full max-w-[1440px] sticky top-0 z-50 py-md px-lg bg-primary "
>
  <img
    alt="Sebrae"
    class="h-[60px] w-[111px] object-cover cursor-pointer"
    src="/assets/sebrae-logo.png"
  />
  <div
    class="flex-between h-[60px] gap-md bg-surface radius-full px-sm py-2xs"
  >
    <div
      class="relative "
    >
      <div
        class="flex items-center gap-sm bg-surface-secondary radius-full px-sm py-xs overflow-hidden"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-search shrink-0 text-inactive"
          fill="none"
          height="20"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m21 21-4.34-4.34"
          />
          <circle
            cx="11"
            cy="11"
            r="8"
          />
        </svg>
        <input
          class="typo-body-bold bg-transparent outline-none w-full truncate"
          placeholder="Buscar município..."
          type="text"
          value="Campina Grande"
        />
      </div>
    </div>
    <nav
      class="flex-between gap-md"
    >
      <button
        class="typo-body whitespace-nowrap transition-colors px-sm py-xs radius-full bg-accent text-[var(--semantic-button-label-primary)]"
      >
        Agenda prioritária
      </button>
      <button
        class="typo-body whitespace-nowrap transition-colors px-sm py-xs radius-full hover:text-accent"
      >
        Mapeamento de recursos
      </button>
      <button
        class="typo-body whitespace-nowrap transition-colors px-sm py-xs radius-full hover:text-accent"
      >
        Formulador de iniciativas
      </button>
    </nav>
  </div>
  <div
    class="flex items-center gap-xs h-[60px] radius-full "
  >
    <svg
      class="shrink-0"
      fill="none"
      style="width: var(--radius-xl); height: var(--radius-xl);"
      viewBox="-6 -6 44 44"
    >
      <clippath
        id="user-avatar-clip"
      >
        <path
          d="M0 16C0 7.163 7.163 0 16 0s16 7.163 16 16-7.163 16-16 16S0 24.837 0 16Z"
        />
      </clippath>
      <g
        clip-path="url(#user-avatar-clip)"
      >
        <path
          class="text-[var(--semantic-surface-primary)]"
          d="M0 16C0 7.163 7.163 0 16 0s16 7.163 16 16-7.163 16-16 16S0 24.837 0 16Z"
          fill="currentColor"
        />
        <path
          class="text-[var(--semantic-text-primary)]"
          d="M15.717 7.006c3.856-.156 7.111 2.838 7.276 6.694.166 3.855-2.82 7.118-6.675 7.293-3.87.176-7.145-2.823-7.311-6.692-.166-3.87 2.841-7.138 6.71-7.295Z"
          fill="currentColor"
        />
        <path
          class="text-[var(--semantic-text-primary)]"
          d="M15.034 23.012l.094-.002c.862-.016 2.278-.027 3.125.08 1.712.217 3.647.946 5.064 1.889.526.356 1.022.751 1.483 1.181.74.683 1.743 1.827 2.14 2.75.095.221.049 1.609.053 1.943.018 1.372-.023 2.776 0 4.148-3.308-.038-6.681-.005-9.995-.005l-7.827.001-2.55.001c-.516 0-1.093.01-1.604-.016l-.003-3.596c0-.43-.06-2.153.052-2.474.083-.24.236-.451.376-.663.436-.659.914-1.253 1.47-1.823 1.735-1.781 4.226-2.977 6.738-3.324.456-.063.922-.075 1.382-.09Z"
          fill="currentColor"
        />
      </g>
    </svg>
    <span
      class="typo-body whitespace-nowrap"
    >
      João Maria
    </span>
  </div>
</header>
`;

exports[`Snapshot tests — CSS refactor safety > ResourcesCard 1`] = `
<div
  class="card-surface-secondary p-md flex flex-col gap-sm justify-between "
>
  <span
    class="typo-body"
  >
    Total empenhado
  </span>
  <span
    class="typo-display-sm"
  >
    R$ 4,1 bilhões
  </span>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > RisksCard 1`] = `
<div
  class="status-alert-bg radius-sm p-lg border border-solid border-[var(--semantic-alert)] flex flex-col gap-md "
>
  <div
    class="flex items-start gap-md w-full"
  >
    <span
      class="flex-1 typo-body-bold"
    >
      Investimento per capita
    </span>
    <span
      class="shrink-0 typo-display-sm text-[color:var(--semantic-alert)]"
    >
      R$ 180
    </span>
  </div>
  <p
    class="typo-body"
  >
    Valor abaixo da média
  </p>
  <p
    class="typo-body-bold"
  >
    Investimento público
  </p>
  <p
    class="typo-body"
  >
    Contexto de risco
  </p>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > SectionContainer 1`] = `
<section
  class="section-container "
>
  <div>
    Content
  </div>
</section>
`;

exports[`Snapshot tests — CSS refactor safety > SectionHeader — title only 1`] = `
<div
  class="flex "
>
  <h2
    class="w-3/4 typo-h1"
  >
    Panorama
  </h2>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > SectionHeader — with description 1`] = `
<div
  class="flex items-center gap-md "
>
  <h2
    class="w-2/3 typo-h1"
  >
    Panorama
  </h2>
  <p
    class="w-1/3 typo-body"
  >
    Descrição da seção
  </p>
</div>
`;

exports[`Snapshot tests — CSS refactor safety > TitleSubtitle 1`] = `
<div
  class="flex-col-start gap-sm "
>
  <h3
    class="w-full typo-h2"
  >
    Emendas parlamentares
  </h3>
  <p
    class="w-full typo-body-lg"
  >
    Recursos destinados
  </p>
</div>
`;
